syntax = "proto3";

package ru.otus.protobuf.generated;

option java_multiple_files = true;

message MessageOut {
    int32 value = 1;
}

message MessageIn {
    int32 firstValue = 1;
    int32 lastValue = 2;
}

service ExchangeService {
    rpc createMessage(MessageIn) returns (stream MessageOut);
}